package com.lucknow.healthcare.enums;

/**
 * User roles for the healthcare services platform
 * 
 * Defines the different types of users in the system:
 * - CUSTOMER: End users who book healthcare services
 * - PROVIDER: Healthcare professionals who provide services
 * - ADMIN: System administrators who manage the platform
 * 
 * @author Lucknow Healthcare Team
 * @version 1.0.0
 */
public enum UserRole {
    CUSTOMER,
    PROVIDER,
    ADMIN
}
